1 - Use sqlite db 2 - Use local volumes to save config files, profiles and projects

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,20 @@
 version: '3'
 
 services:
-  db:
-    image: postgres
+#  db:
+#    image: postgres
   web:
     build: .
     command: >
       bash -c "sh start_django.sh"
     volumes:
+      - ~/solida-core:/root
+      - ~/solida-core/projects:/root/projects
       - .:/kode
       - ~/.ssh:/root/.ssh:ro
+
     ports:
       - "8000:8000"
-    depends_on:
-      - db
+#    depends_on:
+#      - db
 
